# RNAFlow

./: .gitignore  .gitmodules  CONTAINER_GUIDE.md  Makefile  README.md  config.yaml  containerize.sh  docker-compose.yml  mermaid.md  requirements.txt  run_real_delivery.sh  run_with_logger.sh  snakefile  submit.md  test_container.sh
build_reference/: config.yaml  snakefile
config/: cluster_config.yaml  config.yaml  reference.yaml  run_parameter.yaml
data/: Illumina_Universal_Adapter.fa  Universal_Adapter.fa  fastq_screen.conf_template
doc/: README_zh.md
envs/: Preseq.yaml  analysis.yaml  arriba.yaml  bcftools.yaml  bwa2.yaml  circexplorer2.yaml  deeptools.yaml  deg_deseq2.yaml  fastp.yaml  fastq-screen.yaml  fastq_screen.yaml  fastqc.yaml  gatk.yaml  gffcompare.yaml  go_enrich_r.yaml  mosdepth.yaml  picard.yaml  (+13 more)
mcp/: MCP.md  OPTIMIZATION_CHANGES.md  OPTIMIZATION_SUMMARY.md  README.md  REMOTE_DEPLOYMENT.md  TEST_AND_DEPLOY.md  main.py  mcp_config.yaml  pyproject.toml  requirements.txt  server.py  start.sh
mcp/core/: __init__.py  config.py  legacy_dispatcher.py  logger.py  middleware.py  response.py
mcp/db/: __init__.py  crud.py  database.py  session.py
mcp/docs/: REMOTE_DEPLOYMENT.md  SSH_CONFIG_EXAMPLE.json  TEST_AND_DEPLOY.md  USAGE_EXAMPLES.md
mcp/models/: __init__.py  schemas.py
mcp/services/: __init__.py  project_mgr.py  snakemake.py  system.py
mcp/skills/examples/: config_qc_only.yaml  config_standard_deg.yaml  run_rnaflow.sh
mcp/test/: test_mcp.py  test_tools.py
scripts/json_md5_verifier/: Cargo.toml
scripts/json_md5_verifier/src/: main.rs
(+234 files in other folders)
