[package]
name = "json_md5_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
md5 = "0.7"
indicatif = { version = "0.17", features = ["rayon"] }
log = "0.4"
fern = "0.6"
chrono = "0.4"
csv = "1.3"